# LoveSoStrong

./: README.md  archive_browser.py  archive_chatgpt.json  archive_chatgpt_cr.txt  archive_msgboard_alt_cr.txt  archive_msgboard_alt_crlf.txt  archive_msgboard_alt_lf.txt  archive_msgboard_crlf.txt  archive_msgboard_lf.txt  archive_msgboard_multi_cr.txt  archive_msgboard_multi_crlf.txt  archive_msgboard_multi_lf.txt  archive_parser.py  chat_archive_tool.py  convert.sh  display_message_file.py  format_schema.dtd  format_schema.json  format_schema.yaml  mini_parser.py  nextest.py  parse_message_file.php  parse_message_file.py  pyproject.toml  setup.py  testing.py
data/: archive_chatgpt.html  archive_chatgpt.json  archive_chatgpt.yaml  archive_chatgpt_cr.txt  archive_chatgpt_crlf.txt  archive_chatgpt_lf.txt  archive_msgboard.html  archive_msgboard.json  archive_msgboard.yaml  archive_msgboard_alt.html  archive_msgboard_alt.json  archive_msgboard_alt.yaml  archive_msgboard_alt_cr.txt  archive_msgboard_alt_crlf.txt  archive_msgboard_alt_lf.txt  archive_msgboard_cr.txt  archive_msgboard_crlf.txt  archive_msgboard_lf.txt  archive_msgboard_multi.html  archive_msgboard_multi.json  archive_msgboard_multi.yaml  archive_msgboard_multi_cr.txt  archive_msgboard_multi_crlf.txt  archive_msgboard_multi_lf.txt  archive_xtwitter.html  archive_xtwitter.json  archive_xtwitter.yaml  archive_xtwitter_cr.txt  archive_xtwitter_crlf.txt  archive_xtwitter_lf.txt  convert.sh
pytextarchive/: __init__.py  archive_parser.py  mini_parser.py  parse_message_file.py
redata/: Tmp  archive_chatgpt.html  (+29 more)
